; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/net/extr_getservent.c_getservbyname.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/net/extr_getservent.c_getservbyname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.servent = type { i32 }
%struct.key = type { i8*, i8* }

@wrap_getservbyname_r = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.servent* @getservbyname(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.key, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds %struct.key, %struct.key* %5, i32 0, i32 0
  store i8* %6, i8** %7, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = getelementptr inbounds %struct.key, %struct.key* %5, i32 0, i32 1
  store i8* %8, i8** %9, align 8
  %10 = load i32, i32* @wrap_getservbyname_r, align 4
  %11 = bitcast %struct.key* %5 to { i8*, i8* }*
  %12 = getelementptr inbounds { i8*, i8* }, { i8*, i8* }* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = getelementptr inbounds { i8*, i8* }, { i8*, i8* }* %11, i32 0, i32 1
  %15 = load i8*, i8** %14, align 8
  %16 = call %struct.servent* @getserv(i32 %10, i8* %13, i8* %15)
  ret %struct.servent* %16
}

declare dso_local %struct.servent* @getserv(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
